--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,4 @@
 @media (max-width: 1200px)
-  .footer
-    display: none
-  .subscribe
-    display: none  
   .container
     max-width: 960px 
   .content
@@ -19,11 +15,6 @@
     &-item
       padding-top: 10px 
   .article
-    padding-top: 20px
-    padding-bottom: 20px
-    &__item
-      padding-right: 20px
-      padding-left: 20px
     &__title
       font-size: 14px
     &__img
@@ -61,6 +52,9 @@
   .flowering
     &__title
       font-size: 38px
+  .subscribe
+    &__title
+      font-size: 38px    
 @media (max-width: 1005px)
   .container
     max-width: 800px  
@@ -81,8 +75,7 @@
     flex-wrap: wrap 
     padding-bottom: 0    
     &__item
-      width: 50%
-      margin-bottom: 25px 
+      width: 50% 
       &:not(:nth-last-child(even))   
         &:after                      
           content: ""
@@ -92,6 +85,7 @@
           right: 0px
           width: 1px
           background-color: $grey95
+      
   .divider
     margin-left: 15px
     margin-right: 15px
@@ -136,7 +130,11 @@
         padding: 35px 30px 20px
   .oval
     bottom: 0
-    right: 0      
+    right: 0  
+  .footer
+    &-menu
+      &__block
+        padding-right: 15px    
 @media (max-width: 992px)
   .button
     &:hover      
@@ -182,7 +180,7 @@
   .article
     &-link
       &:hover
-        background: transparent
+        text-decoration: none
   .content
     &-info
       &__link
@@ -197,7 +195,28 @@
       &__text
         &-video
           &:hover
-            background-color: transparent                   
+            background-color: transparent  
+  .footer
+    &-menu
+      &__link
+        &:hover
+          border-bottom: 1px solid transparent
+    &-contact
+      &__link
+        &:hover
+          border-bottom: 1px solid transparent    
+  .facebook
+    &:hover
+      background: #4267B2
+  .twitter
+    &:hover
+      background: #1DA1F2
+  .instagram
+    &:hover
+      background: #262626
+  .youtube             
+    &:hover
+      background: #FF0000
 @media (max-width: 880px)
   .container
     max-width: 700px  
@@ -325,6 +344,19 @@
     &-manufacture
       grid-row: 6 / 7
       grid-column: 2 / 3
+  .footer
+    &-menu
+      flex-wrap: wrap
+      padding-bottom: 0
+      &__block
+        width: 33.3%
+        flex: none
+        margin-bottom: 30px
+    &-contact
+      flex-wrap: wrap  
+      &__social
+        width: 100%
+        justify-content: flex-end
 @media (max-width: 768px)
   .container
     max-width: 600px
@@ -365,8 +397,16 @@
   .flowering
     &__title
       font-size: 30px
-      line-height: 130%   
-       
+      line-height: 130% 
+  .subscribe
+    &__title
+      font-size: 30px     
+  .footer
+    &-contact
+      &__menu
+        flex: none 
+    &-bottom
+      font-size: 12px    
 @media (max-width: 640px)
   .container
     max-width: 440px 
@@ -382,6 +422,28 @@
   .article
     &__title
       font-size: 14px
+    &__item
+      width: 100%  
+      &:not(:nth-last-child(odd))   
+        &:after                     
+          content: ""
+          position: absolute
+          bottom: 0px
+          top: 0px
+          right: 0px
+          width: 1px
+          background-color: $grey95
+      &:not(:nth-last-child(1))   
+        &:before                     
+          content: ""
+          position: absolute
+          bottom: 0
+          left: 25px
+          right: 25px
+          height: 1px
+          background-color: $grey85
+        
+      
   .divider
     margin-left: 8px
     margin-right: 8px 
@@ -458,31 +520,38 @@
         padding: 35px 30px 20px
   .oval
     bottom: 0
-    right: 0             
+    right: 0   
+  .subscribe
+    &-form
+      flex-direction: column
+    &__button
+      margin-top: 30px
   .list
     &-item
       flex-direction: column 
       &__link
-        margin-right: 0
+        min-width: 100%
+        min-height: 45%
+        margin-right: 0     
       &__info
-        margin-top: 10px       
+        margin-top: 10px 
+  .footer
+    padding-bottom: 40px
+    &-contact
+      &__menu
+        flex-wrap: wrap
+        flex: 2
+      &__item  
+        margin-bottom: 8px
+      &__social
+        margin-top: 20px  
+      
   .modal
     &__video
       width: 440px
       height: 250px
 @media (max-width: 595px)
-  .article
-    &__item
-      width: 100%    
-      &:not(:nth-last-child(odd))   
-        &:after                      
-          content: ""
-          position: absolute
-          bottom: 0px
-          top: 0px
-          right: 0px
-          width: 1px
-          background-color: $grey95
+  
   .recommended
     &__backcolor
       height: 700px
@@ -507,6 +576,9 @@
     &__title
       font-size: 28px
       line-height: 35px 
+  .subscribe
+    &__title
+      font-size: 28px    
   .infobox
     &-wrapper
       grid-gap: 20px
@@ -563,7 +635,11 @@
 @media (max-width: 438px)
   .selection
     height: 550px         
-        
+  .footer
+    &-menu
+      &__block
+        width: 50%
+          
 @media (max-width: 390px)  
  
   .search
@@ -599,6 +675,20 @@
     &-slider
       &__title
         font-size: 33px 
+  .subscribe
+    &__input
+      width: 100%      
+  .footer
+    &-contact
+      &__menu
+        flex-direction: column
+        justify-content: space-between
+        align-items: flex-start
+      &__item
+        margin-bottom: 5px  
+      &__social
+        justify-content: flex-start
+        margin-left: 0  
 @media ( max-width: 340px )
   .list
     &-item   
@@ -609,7 +699,8 @@
         font-size: 10px
   .article
     &__img
-      display: none      
+      display: none  
+          
         
 
 
