--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -50,10 +50,6 @@
     align-items: center
     border-top: 1px solid $grey15
     border-bottom: 1px solid $grey15
-    &__left
-      display: flex
-      justify-content: space-between
-      align-items: center
     &__logo
       display: block
       flex-shrink: 0
@@ -68,8 +64,10 @@
         height: 18px
     &__menu
       display: flex
-      justify-content: space-between
+      justify-content: flex-start
       align-items: center
+      flex: 2
+      padding-left: 0
     &__item
       margin-left: 30px
       font-weight: bold
@@ -88,6 +86,7 @@
       display: flex
       justify-content: space-between
       align-items: center  
+      margin-left: 30px
   &-bottom
     padding-top: 40px
     display: flex
@@ -96,7 +95,7 @@
     font-style: normal
     font-weight: normal
     font-size: 14px
-    line-height: 20px
+    line-height: 143%
     color: $grey50
     &__text
       margin: 0 127px 0 0
