--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -14,40 +14,39 @@
 .article
   width: 100%
   background-color: $grey95 
-  padding: 25px 0 25px 0
+  padding-left: 0  
   display: flex
   justify-content: space-between
   align-items: flex-start
   border-radius: 10px  
   &-link
+    width: 100%
+    height: 100%
+    padding: 25px
     display: flex
     justify-content: space-between
     align-items: flex-start
-    &:hover
-      background: $grey85 
-  &__item
-    width: 100%
-    height: 100%  
-    padding-right: 24px
-    padding-left: 24px
-    position: relative       
-    &:not(:nth-last-child(1))   
-      &:after                      
-        content: ""
-        position: absolute
-        bottom: 0px
-        top: 0px
-        right: 0px
-        width: 1px
-        background-color: $grey85
-  &__title
     font-family: 'Roboto Slab', serif
     font-style: normal
     font-weight: bold
     font-size: 16px
     line-height: 156%
     color: $light
-    text-decoration: none    
+    &:hover
+      text-decoration: underline
+  &__item
+    width: 100%
+    height: 100%  
+    position: relative       
+    &:not(:nth-last-child(1))   
+      &:after                      
+        content: ""
+        position: absolute
+        bottom: 25px
+        top: 25px
+        right: 0px
+        width: 1px
+        background-color: $grey85        
   &__img
     width: 65px
     height: 65px
@@ -62,6 +61,7 @@
   height: 570px
   margin-top: 30px
   border-radius: 10px
+  overflow: hidden
   position: relative    
   display: flex
   justify-content: space-between
@@ -236,7 +236,7 @@
     flex-shrink: 1
     width: 100%
     height: 100%
-    border-top: 1px solid $grey15
+    border-top: 1px solid $grey15    
     cursor: pointer
     padding: 18px 25px 18px 25px
     position: relative
@@ -254,7 +254,7 @@
       &--active
         border-color: transparent $grey05 transparent transparent 
     &--active
-      background-color: $grey05        
+      background-color: $grey05            
     &__title
       font-size: 12px
       line-height: 125%
