--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -11,13 +11,17 @@
     font-style: normal
     font-weight: bold
     font-size: 40px
-    line-height: 50px
+    line-height: 125%
     color: $grey100
+    margin-top: 0
     margin-bottom: 25px
+    text-align: center
   &-form
     display: flex
     justify-content: space-between
     align-items: center
+    padding: 0
+    margin: 0
   &__input
     width: 313px
     height: 40px
